style: estilizado a class (logoeOpcoes)

--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -14,3 +14,9 @@ header{
     display: flex;
     justify-content: space-between;
 }
+
+.logoeOpcoes{
+    display: flex;
+    gap: 30px;
+    color: hsl(219, 9%, 45%);
+}
