--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -20,3 +20,11 @@ header{
     gap: 30px;
     color: hsl(219, 9%, 45%);
 }
+
+.opcao{
+    cursor: pointer;
+}
+
+.collections{
+    margin-left: 30px;
+}
