--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -31,8 +31,36 @@ header{
     margin: auto;
 }
 
+
+.linhaSelectOpcao{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: hsl(26, 100%, 55%);
+    margin-top: 41px;
+
+}
+
 .collections{
     margin-left: 30px;
+    position: relative;
+}
+
+.men{
+    position: relative;
+}
+
+.women{
+    position: relative;
+}
+
+.about{
+    position: relative;
+}
+
+.contact{
+    position: relative;
 }
 
 .divCartAvatar{
