style: estilizado (opcao:hover .linhaSelectOpcao) e atualizado class (linhaSelectOpcao : acrescentado transition)

--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -39,6 +39,7 @@ header{
     height: 4px;
     background-color: hsl(26, 100%, 55%);
     margin-top: 41px;
+    transition: 0.4s;
 
 }
 
@@ -61,6 +62,11 @@ header{
 
 .contact{
     position: relative;
+}
+
+.opcao:hover .linhaSelectOpcao {
+    display: block;
+    transition: 0.4s;
 }
 
 .divCartAvatar{
