style: atualizado tag (main: adicionado justify-content e align-items); atualizado class (secaoTotalLadoEsquerdo: adicionado float e width); estilizado class (imgProdutoPrincipal)

--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -111,12 +111,22 @@ svg:hover path{
 
 main{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .secaoTotalLadoEsquerdo{
+    float: left;
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.imgProdutoPrincipal{
+    width: 500px;
+    height: 500px;
+    border-radius: 20px;   
 }
 
