--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -110,14 +110,14 @@ svg:hover path{
 }
 
 main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .secaoTotalLadoEsquerdo{
     float: left;
     width: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -155,5 +155,15 @@ main{
     height: 100px;
     background:  hsla(230, 60%, 98%, 0.712);
     border-radius: 10px;
+}
+
+.secaoTotalLadoDireito{
+    float: right;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
