--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;500;600;700;800;900&display=swap');
 
 *{
     margin: 0;
@@ -165,5 +165,17 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+h5{
+    color: hsl(26, 100%, 55%);
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+
+h1{
+    font-size: 45px;
+    font-weight: 700;
+    color: hsl(220, 13%, 13%);
 }
 
