--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -208,3 +208,10 @@ h3{
     margin-left: 15px;
 
 }
+
+.precoDesconto{
+    font-size: 16px;
+    color: hsl(220, 14%, 75%);
+    margin-top: 10px;
+    text-decoration: line-through;
+}
