--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -261,7 +261,14 @@ h3{
 }
 
 .botaoAddCart{
-    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    width: 270px;
     background-color: hsl(26, 100%, 55%);
     padding: 13px 7px 13px 7px;
+    gap: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px hsl(26, 80%, 54%);
 }
