--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -238,6 +238,7 @@ h3{
     color: hsl(26, 100%, 55%);
     font-size: 20px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .quantidade{
@@ -258,6 +259,7 @@ h3{
     color: hsl(26, 100%, 55%);
     font-size: 20px;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .botaoAddCart{
