--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -84,7 +84,7 @@ header{
     cursor: pointer;
 }
 
-svg:hover path{
+.divCart svg:hover path{
     fill: black;
 }
 
@@ -278,4 +278,13 @@ h3{
     color: white;
     font-size: 16px;
     font-weight: 700;
+}
+
+.divImgCart path{
+    fill: white;
+}
+
+.divImgCart svg{
+    width: 15px;
+    height: 15px;
 }
