--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -278,6 +278,7 @@ h3{
     color: white;
     font-size: 16px;
     font-weight: 700;
+    position: relative;
 }
 
 .divImgCart path{
@@ -287,4 +288,22 @@ h3{
 .divImgCart svg{
     width: 15px;
     height: 15px;
+}
+
+.overlayBotaoAddCart{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:  hsla(230, 60%, 98%, 0.425);
+    border-radius: 10px;
+}
+
+.botaoAddCart:hover .overlayBotaoAddCart{
+    display: block;
+    box-shadow: none;
+}
+
+.botaoAddCart:hover{
+    box-shadow: none;
 }
