--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -273,9 +273,24 @@ h3{
     height: 20px;
     width: 42px;
     color: hsl(26, 100%, 55%);
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
     cursor: pointer;
+    position: relative;
+}
+
+.overlayBotaoAdicionar{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:  hsla(230, 60%, 98%, 0.425);
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.botaoAdicionar:hover .overlayBotaoAdicionar{
+    display: block;
 }
 
 .botaoAddCart{
