--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -111,17 +111,19 @@ header{
 }
 
 main{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 80px;
+    padding: 20px 40px 50px 40px;
 }
 
 .secaoTotalLadoEsquerdo{
-    float: left;
-    width: 50%;
-    height: 100%;
+    width: 500px;
+    height: 623px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -162,9 +164,8 @@ main{
 }
 
 .secaoTotalLadoDireito{
-    float: right;
-    width: 50%;
-    height: 100%;
+    width: 430px;
+    height: 414px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -194,7 +195,6 @@ h1{
 h3{
     display: flex;
     align-items: center;
-
     font-size: 25px;
     font-weight: 700;
     margin-top: 25px;
