--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -312,6 +312,7 @@ h3{
     font-size: 16px;
     font-weight: 700;
     position: relative;
+    border: 0 solid transparent;
 }
 
 .divImgCart path{
