--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -244,6 +244,8 @@ h3{
     font-weight: 700;
     cursor: pointer;
     position: relative;
+    border: 0 solid transparent;
+    background-color: hsl(223, 64%, 98%);
 }
 
 .overlayBotaoEliminar{
@@ -280,6 +282,8 @@ h3{
     font-weight: 700;
     cursor: pointer;
     position: relative;
+    border: 0 solid transparent;
+    background-color: hsl(223, 64%, 98%);
 }
 
 .overlayBotaoAdicionar{
