--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -80,6 +80,22 @@ header{
     gap: 45px;
 }
 
+#quantidadeCarrinho{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 15px;
+    background-color: hsl(26, 100%, 55%);
+    border-radius: 43%;
+    font-size: 10px;
+    z-index: 1;
+    color: white;
+    margin-left: 10px;
+    margin-top: -8px;
+    position: absolute;
+}
+
 .divCart{
     cursor: pointer;
 }
