style: atualizado id (quantidadeCarrinho: mudado valor do display para none)

--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -81,7 +81,7 @@ header{
 }
 
 #quantidadeCarrinho{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     width: 20px;
