--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -78,6 +78,17 @@ header{
 .divCartAvatar{
     display: flex;
     gap: 45px;
+    position: relative;
+}
+
+#divDescricaoProdutoCart{
+    position: absolute;
+    width: 350px;
+    height: 250px;
+    background-color: hsl(223, 64%, 98%);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    margin-top: 70px;
+    margin-left: -180px;
 }
 
 #quantidadeCarrinho{
