--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -91,6 +91,31 @@ header{
     margin-left: -180px;
 }
 
+#tituloCart{
+    margin-top: 25px;
+    margin-left: 25px;
+    font-size: 16px;
+    font-weight: 800;
+}
+
+#linhaCart{
+    width: 100%;
+    height: 1px;
+    background-color: hsl(220, 14%, 75%);
+    margin-top: 25px;
+}
+
+#paragrafoDescricaoCartVazio{
+    width: 350px;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: hsl(219, 9%, 45%);
+    font-size: 16px;
+    font-weight: 700;
+}
+
 #quantidadeCarrinho{
     display: none;
     justify-content: center;
