--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -82,6 +82,7 @@ header{
 }
 
 #divDescricaoProdutoCart{
+    display: none;
     position: absolute;
     width: 350px;
     height: 250px;
@@ -115,6 +116,66 @@ header{
     font-size: 16px;
     font-weight: 700;
 }
+
+#divTotalDescricaoCartCheio{
+    display: none;
+}
+
+.divDescricaoCartCheio{
+    width: 350px;
+    height: 100px;
+    display: flex;
+    padding: 0 10px 0 10px;
+}
+
+.fotoProdutoCart{
+    width: 50px;
+    border-radius: 5px;
+}
+
+.paragrafoDescricaoCartCheio{
+    font-size: 16px;
+    color: hsl(219, 9%, 45%);
+    line-height: 1.5;
+}
+
+.divBotaoCheckout{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.botaoCheckout{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: hsl(26, 100%, 55%);
+    font-size: 16px;
+    font-weight: 700;
+    color: white;
+    border: 0 solid transparent;
+    border-radius: 10px;
+    padding: 15px 120px 15px 120px;
+    margin-bottom: 28px;
+    cursor: pointer;
+    position: relative;
+}
+
+.overlayBotaoCheckout{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background:  hsla(230, 60%, 98%, 0.425);
+    border-radius: 10px;
+}
+
+.botaoCheckout:hover .overlayBotaoCheckout{
+    display: block;
+}
+
 
 #quantidadeCarrinho{
     display: none;
