--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -139,6 +139,11 @@ header{
     line-height: 1.5;
 }
 
+.textBlack{
+    color: black;
+    font-weight: 700;
+}
+
 .divBotaoCheckout{
     width: 100%;
     height: 80px;
