--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -8,8 +8,8 @@
 }
 
 body{
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
     background-color: white;
 }
 
@@ -229,15 +229,34 @@ header{
 }
 
 main{
-    width: 100vw;
-    height: 100vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     gap: 80px;
     padding: 20px 70px 20px 70px;
+    overflow: auto;
 }
+
+.secaoTotalLadoEsquerdoDepoisDoClick{
+    width: 500px;
+    height: 623px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 70px;
+    position: fixed;
+    z-index: 5;
+}
+
+
+.imgProdutoPrincipalDepoisDoClick{
+    width: 660px;
+    height: 640px;
+    border-radius: 20px;
+}
+
 
 .secaoTotalLadoEsquerdo{
     width: 500px;
@@ -246,6 +265,15 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 70px;
+}
+
+.divPreviousNextFotoPrincipal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
 }
 
 .imgProdutoPrincipal{
