--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -13,6 +13,15 @@ body{
     background-color: white;
 }
 
+.bigOverlay{
+    display: none;
+    position: absolute;
+    min-width: 100vw;
+    min-height: 100vh;
+    background: hsla(240, 2%, 12%, 0.712);
+    z-index: 5;
+}
+
 header{
     display: flex;
     justify-content: space-between;
@@ -250,6 +259,51 @@ main{
     z-index: 5;
 }
 
+.divPreviousNextFotoPrincipal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+}
+
+.divImgClose svg path{
+    fill: white;
+}
+
+
+.divImgClose{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 24px;
+    margin-bottom: 720px;
+    margin-left: 640px;
+    z-index: 6;
+}
+
+.divImgClose svg:hover path {
+    fill: hsl(26, 100%, 55%);
+}
+
+.divImgPrevious{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+    background-color: white;
+    border-radius: 50%;
+    z-index: 6;
+    margin-right: 660px;
+}
+
+.divImgPrevious:hover svg path{
+    stroke: hsl(26, 100%, 55%);
+}
 
 .imgProdutoPrincipalDepoisDoClick{
     width: 660px;
@@ -257,6 +311,22 @@ main{
     border-radius: 20px;
 }
 
+.divImgNext{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+    background-color: white;
+    border-radius: 50%;
+    z-index: 6;
+    margin-left: 660px;
+}
+
+.divImgNext:hover svg path{
+    stroke: hsl(26, 100%, 55%);
+}
 
 .secaoTotalLadoEsquerdo{
     width: 500px;
@@ -266,14 +336,6 @@ main{
     justify-content: center;
     align-items: center;
     margin-top: 70px;
-}
-
-.divPreviousNextFotoPrincipal{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
 }
 
 .imgProdutoPrincipal{
