feat: estilizado class(divImgLixeira) e (divImgLixeira:hover svg path)

--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -190,6 +190,13 @@ header{
     display: block;
 }
 
+.divImgLixeira{
+    cursor: pointer;
+}
+
+.divImgLixeira:hover svg path{
+    fill: black;
+}
 
 #quantidadeCarrinho{
     display: none;
