--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -26,6 +26,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 30px 70px 30px 70px;
+    position: relative;
 }
 
 .headerMediaQueries{
@@ -98,7 +99,6 @@ header{
 .divCartAvatar{
     display: flex;
     gap: 45px;
-    position: relative;
 }
 
 #divDescricaoProdutoCart{
@@ -109,7 +109,8 @@ header{
     background-color: hsl(223, 64%, 98%);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     margin-top: 70px;
-    margin-left: -180px;
+    margin-left: 80%;
+    z-index: 5;
 }
 
 #tituloCart{
@@ -146,6 +147,9 @@ header{
     height: 100px;
     display: flex;
     padding: 0 10px 0 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
 
 .fotoProdutoCart{
@@ -581,7 +585,14 @@ h3{
 
 
 @media(max-width: 375px){
- 
+    body{
+        display: flex;
+        flex-direction: column;
+   
+
+        position: relative;
+    }
+
     header{
         padding: 20px 30px 10px 30px;
     }
@@ -620,7 +631,7 @@ h3{
         z-index: 7;
         background-color: white;
         width: 200px;
-        height: 100%;
+        height: 100vh;
         left: 0;
         top: 0;
         font-size: 16px;
@@ -656,7 +667,6 @@ h3{
     .divCartAvatar{
         display: flex;
         gap: 25px;
-        position: relative;
     }
 
     .imgAvatar{
@@ -666,6 +676,13 @@ h3{
 
     .linha{
         display: none;
+    }
+
+    #divDescricaoProdutoCart{
+        display: block;
+        max-width: 90vw;
+        height: 300px;
+        z-index: 6;
     }
 
     main{
