--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -11,13 +11,16 @@ body{
     min-height: 100vh;
     min-width: 100vw;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .bigOverlay{
     display: none;
     position: absolute;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     background: hsla(240, 2%, 12%, 0.712);
     z-index: 5;
 }
@@ -278,7 +281,7 @@ main{
     justify-content: center;
     align-items: center;
     margin-top: 45px;
-    position: fixed;
+    position: absolute;
     z-index: 5;
 }
 
