--- a/ecommerce-product-page-main/style.css
+++ b/ecommerce-product-page-main/style.css
@@ -755,6 +755,89 @@ h3{
     
 }
 
+@media(max-width: 500px){
+
+    .divCartAvatar{
+        display: flex;
+        width: 75px;
+        gap: 25px;
+    }
+
+    .imgAvatar{
+        width: 35px;
+        height: 35px;
+    }
+
+    main{
+        width: 100%;
+        min-width: 280px;
+        padding: 0;
+        overflow: hidden;
+        gap: 23px;
+        margin-top: 0px;
+        padding-bottom: 20px;
+    }
+
+    .secaoTotalLadoDireito{
+        max-width: 90%;
+        height: 414px;
+        margin-top: 30px;
+    }
+
+    h5{
+        font-size: 14px;
+        margin-bottom: 10px;
+        letter-spacing: 1.2px;
+    }
+    
+    h1{
+        max-width: 370px;
+        font-size: 35px;
+        font-weight: 700;
+    }
+
+    .paragrafo{
+        font-size: 14px;
+        width: 100%;
+        margin-top: 25px;
+    }
+
+    h3{
+        font-size: 25px;
+        margin-top: 25px;
+    }
+
+    .precoDesconto{
+        font-size: 14px;   
+        margin-top: -22px;
+        float: right;
+    }
+
+    .totalBotoes-Quantidade-AdicionarCart{
+        flex-direction: column;
+        margin-top: 20px;
+        gap: 20px;
+    }
+    
+    .divBotaoQuantidade{
+        width: 100%;
+        padding: 18px 7px 18px 7px;
+        justify-content: space-between;
+    }
+
+    .botaoAddCart{
+        font-size: 16px;
+        width: 100%;
+        padding: 18px 7px 18px 7px;
+        gap: 10px;
+        font-size: 16px;
+    }
+
+
+
+    
+}
+
 @media(max-width: 375px){
     body{
         display: flex;
@@ -939,6 +1022,7 @@ h3{
     .secaoTotalLadoDireito{
         max-width: 90%;
         height: 414px;
+        margin-top: 0px;
     }
 
     h5{
